# morningstar

./: Dockerfile  docker-compose.yml  justfile  readme.md
morningstar_cli/: Cargo.toml
morningstar_cli/src/: lib.rs  main.rs
morningstar_fe/: index.html
morningstar_model/: Cargo.toml
morningstar_model/src/: lib.rs  weekday_flags.rs
morningstar_parser/: Cargo.toml  README.md  justfile
morningstar_parser/src/: extractor.rs  lib.rs  main.rs  timetable.rs
morningstar_parser/src/timetable/: gtfs_extract.rs  my_gtfs_structs.rs  runs_today.rs  uniformise_stop_names.rs
morningstar_rt/: .env.example  Cargo.toml
morningstar_rt/examples/: by_stop.rs
morningstar_rt/src/: lib.rs  main.rs  mock.rs  parser_invoker.rs  prim.rs  web_api.rs
morningstar_rt/src/web_api/: poem.rs  state.rs
thin_client/: next_buses.py
