[package]
name = "morningstar_model"
version = "1.3.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["alloc", "now", "serde", "std"] }
time = { version = "0.3.36", features = ["serde"] }
bitflags = { version = "2.5.0", features = ["serde"] }
serde = { version = "1.0.205", features = ["derive"] }
multimap = "0.10.0"

[dev-dependencies]
serde_json = "1"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
strip = true
