[package]
name = "morningstar_rt"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.100"
reqwest = "0.12.23"
dotenvy = "0.15.7"
serde_with = "3.15.0"
morningstar_model = { path = "../morningstar_model" }
clap = { version = "4.5.49", features = ["derive"] }
ron = "0.11.0"
chrono-tz = "0.10.4"
poem = "3.1.12"
thiserror = "2.0.17"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
strip = true
